# Thingy

./: .gitignore  .gitmodules  CMakeLists.txt  CreateProjectLibraries.bat  GenerateProjects.bat  README.md  Thingy.sln  Thingy_Installer_Builder.iss  premake5.lua
.github/workflows/: ci.yml
Thingy/: Resource.aps  Resource.rc  Thingy.vcxproj  Thingy.vcxproj.filters
Thingy/src/: Main.cpp  tpch.h
Thingy/src/Comps/: CustomHeader.cpp  CustomHeader.h
Thingy/src/Core/: Album.cpp  Album.h  Application.cpp  Application.h  Artist.h  AudioManager.cpp  AudioManager.h  CustomHeader.cpp  CustomHeader.h  Fonts.cpp  Fonts.h  HelperFunctions.cpp  HelperFunctions.h  Image.h  ImageManager.cpp  ImageManager.h  Log.cpp  Log.h  Module.cpp  Module.h  NetworkManager.cpp  NetworkManager.h  Playlist.cpp  Playlist.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Style.h  Track.h  User.cpp  User.h
Thingy/src/Core/Managers/: AudioManager.cpp  AudioManager.h  AuthManager.cpp  AuthManager.h  ImageManager.cpp  ImageManager.h  MessageManager.cpp  MessageManager.h  NetworkManager.cpp  NetworkManager.h  SceneManager.cpp  SceneManager.h
Thingy/src/Header/: CustomHeader.cpp  CustomHeader.h
Thingy/src/Modules/: AlbumModule.cpp  AlbumModule.h  ArtistModule.cpp  ArtistModule.h  LoginModule.cpp  LoginModule.h  Modules.h  PlayerModule.cpp  PlayerModule.h  PlaylistListModule.cpp  PlaylistListModule.h  PlaylistModule.cpp  PlaylistModule.h  PopularsModule.cpp  PopularsModule.h  ProfileModule.cpp  ProfileModule.h  SearchModule.cpp  SearchModule.h
Thingy/src/Renderer/: SDLRenderer.cpp  SDLRenderer.h
Thingy/src/Scenes/: AlbumScene.cpp  AlbumScene.h  ArtistScene.cpp  ArtistScene.h  FrontPage.cpp  FrontPage.h  FrontPageScene.cpp  FrontPageScene.h  LoginPage.cpp  LoginPage.h  LoginScene.cpp  LoginScene.h  PlaylistScene.cpp  PlaylistScene.h  ProfileScene.cpp  ProfileScene.h  Scenes.h  SearchScene.cpp  SearchScene.h
